hphp/test/quick/impl_abstract_dv_is.php.expectf

Fatal error: Declaration of B::s() must be compatible with that of A::s() in %s on line 3
